# shuriken-sdk-rs

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  publish.yml
examples/: alpha_smoke.rs  splits_smoke.rs  suggestions_smoke.rs  transfers_smoke.rs  wallet_groups_smoke.rs  wallets_smoke.rs
src/: client.rs  error.rs  lib.rs
src/api/: account.rs  mod.rs  perps.rs  portfolio.rs  swap.rs  tokens.rs  trigger.rs
src/http/: account.rs  alpha.rs  mod.rs  perps.rs  portfolio.rs  splits.rs  suggestions.rs  swap.rs  tasks.rs  tokens.rs  transfers.rs  trigger.rs  wallet_groups.rs  wallets.rs
src/ws/: connection.rs  mod.rs  streams.rs  subscription.rs  types.rs
tests/: live_api.rs  serialization.rs
