[package]
name = "shuriken-sdk"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for the Shuriken API"
license = "MIT"
repository = "https://github.com/ShurikenTrade/shuriken-sdk-rs"
homepage = "https://app.shuriken.trade"
keywords = ["shuriken", "crypto", "trading", "api", "sdk"]
categories = ["api-bindings"]

[features]
default = []
ws = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tracing"]

[dependencies]
shuriken-api-types = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"

# ws feature dependencies
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }
futures-util = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
